.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/libdbus-sys-0.2.6/vendor/dbus/dbus/dbus-bus.h

DBUS_EXPORT
DBusConnection *dbus_bus_get_private      (DBusBusType     type,
					   DBusError      *error);
DBUS_EXPORT
dbus_bool_t     dbus_bus_register         (DBusConnection *connection,
					   DBusError      *error);
DBUS_EXPORT
const char*     dbus_bus_get_unique_name  (DBusConnection *connection);
DBUS_EXPORT
int             dbus_bus_request_name     (DBusConnection *connection,
					   const char     *name,
					   unsigned int    flags,
					   DBusError      *error);
DBUS_EXPORT
int             dbus_bus_release_name     (DBusConnection *connection,
					   const char     *name,
					   DBusError      *error);
DBUS_EXPORT
void            dbus_bus_add_match        (DBusConnection *connection,
                                           const char     *rule,
                                           DBusError      *error);
DBUS_EXPORT
void            dbus_bus_remove_match     (DBusConnection *connection,
                                           const char     *rule,
                                           DBusError      *error);