.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/libdbus-sys-0.2.6/vendor/dbus/dbus/dbus-errors.h

DBUS_BEGIN_DECLS

/**
 * @addtogroup DBusErrors
 * @{
 */

/** Mostly-opaque type representing an error that occurred */
typedef struct DBusError DBusError;
/**
 * Object representing an exception.
 */
struct DBusError
{
  const char *name;    /**< public error name field */
  const char *message; /**< public error message field */

  unsigned int dummy1 : 1; /**< placeholder */
  unsigned int dummy2 : 1; /**< placeholder */
  unsigned int dummy3 : 1; /**< placeholder */
  unsigned int dummy4 : 1; /**< placeholder */
  unsigned int dummy5 : 1; /**< placeholder */

  void *padding1; /**< placeholder */
};
DBUS_EXPORT
void        dbus_error_init      (DBusError       *error);
DBUS_EXPORT
void        dbus_error_free      (DBusError       *error);
DBUS_EXPORT
void        dbus_set_error       (DBusError       *error,
                                  const char      *name,
                                  const char      *message,
                                  ...) _DBUS_GNUC_PRINTF (3, 4);